DuPont DevSB/src/objects/ccrz__E_ReviewLike__c.object
<CustomObject>
    <description>Store &quot;Is This review helpful&quot; flag</description>
    <fields>
        <fullName>ccrz__AddedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Added By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Review_Helpful</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Like__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Like</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__Review__c</fullName>
        <label>Review</label>
        <referenceTo>ccrz__E_Review__c</referenceTo>
        <relationshipName>Review_Helpful</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>CC Review Like</label>
    <nameField>
        <label>Review Helpful Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Review Likes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>